<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txt_join_us"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:fontFamily="@font/gotham_bold"
        android:textSize="30sp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content">
    </TextView>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_logo"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txt_join_us"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:fontFamily="@font/gotham_bold"
        android:textSize="15sp"
        android:visibility="gone"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content">
    </TextView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="#000000">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_medium"
            android:hint="@string/txt_hint_username"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/tlUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="#000000">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_medium"
            android:hint="@string/txt_hint_password"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/gotham_bold"
        android:layout_gravity="center"
        android:padding="15sp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/txt_register"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/gotham_bold"
        android:layout_gravity="center"
        android:padding="15sp"
        android:visibility="gone"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/txt_logout"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>